# CryptoAnalysis

./: README.md
backend/: .dockerignore  .gitignore  COMPLETE_SETUP_GUIDE.md  DATA_MIGRATION_GUIDE.md  Dockerfile  MONGODB_SETUP_GUIDE.md  README.md  create_sample_conversations.py  create_sample_users.py  database_setup.py  langgraph.json  main.py  pipeline.py  push_data_to_mongodb.py  pyproject.toml  quick_setup.md  requirements.txt  sample_data.py  setup_environment.py
backend/agents/: analysis.py  chatbot.py  get_news.py
backend/data/: analysis.csv  binance_news.csv
backend/data/processed/: analysis.csv  predict.csv  scoring.csv
backend/models/: training.ipynb
backend/notebooks/crawl_binance/: news.csv
backend/notebooks/llm_analysis/: analysis.csv  analysis.py  requirements.txt
backend/notebooks/predict/: Arima_XGBoost.ipynb  crypto_news.py  predict.csv
frontend/: .gitignore  README.md  tailwind.config.ts
frontend/agents/: chatbot.py  predict.py  scorer.py
frontend/data/: predict.csv  symbols.csv
frontend/data/processed/: predict.csv  scoring.csv
frontend/notebooks/crawl_binance/: 4  binance_news.csv  main.py
frontend/notebooks/predict/: Arima Forecasting.ipynb  predict.py
frontend/src/: App.css
frontend/src/components/: ChatMain.tsx  ChatMessage.tsx  ChatSidebar.tsx
frontend/src/contexts/: ChatContext.tsx
frontend/src/pages/: Index.tsx
frontend/src/services/: cryptoAPI.ts
