[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "backend"
version = "0.1.0"
description = "Crypto Analysis Backend"
requires-python = ">=3.11"
dependencies = []

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-data]
"*" = ["**/*"]